test/sh/error/func/invalid_num_params.sk
f(x: int) {
	# do nothing
}

f(1, 2, 3)
